# Advanced-Programming-O-D

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  GameFlow.cpp  GameFlow.h  GenericLogic.cpp  GenericLogic.h  HumanPlayer.cpp  HumanPlayer.h  Logic.cpp  Logic.h  Player.cpp  Player.h  README.md  Structs.h  log.txt  main.cpp  makefile  zuckero@u2.cs.biu.ac.il
Tests/: Testclass.h  test.cpp  test_AIPlayer.cpp  test_board.cpp  test_cell.cpp  test_game.cpp  test_genericLogic.cpp  test_humanPlayer.cpp  test_main.cpp
etc/: info.txt
ex2/: README.md
ex2/ex2/: Board.cpp  Board.h  Cell.h  GameFlow.cpp  GameFlow.h  Player.cpp  Player.h  main.cpp  makefile
ex4/ex4/exe/: clientConfig.txt
ex4/ex4/src/client/: AIPlayer.h  Client.h  Game.cpp  GameFlow.cpp  GameFlow.h  Structs.h  main.cpp
ex4/ex4/src/server/: main.cpp
ex4/ex4/tests/: test_AIPlayer.cpp  test_board.cpp  test_cell.cpp  test_game.cpp
exe/: clientConfig.txt  serverConfig.txt  server_exe
server/: Server.cpp  Server.h  main.cpp
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Cell.cpp  Client.cpp  Client.h  Game.cpp  Game.h  GameFlow.cpp  GameFlow.h  GenericLogic.cpp  HumanPlayer.cpp  HumanPlayer.h  Player.h  RemotePlayer.cpp  RemotePlayer.h  Structs.h  main.cpp
src/client/: Client.cpp  GameFlow.cpp  GameFlow.h  Structs.h  main.cpp
src/server/: Command.h  CommandArgument.cpp  CommandArgument.h  CommandManager.cpp  CommandManager.h  Controller.cpp  Controller.h  EndCommand.cpp  EndCommand.h  GameManager.cpp  GameManager.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  NoMoveCommand.cpp  NoMoveCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  ServerStructs.h  StartCommand.cpp  StartCommand.h  main.cpp  makefile
uml/: ex2.puml
